tests/ui/consts/const-eval/unwind-abort.stderr
error[E0080]: evaluation panicked: explicit panic
  --> $DIR/unwind-abort.rs:7:15
   |
LL | const _: () = foo();
   |               ^^^^^ evaluation of constant value failed here
   |
note: inside `foo`
  --> $DIR/unwind-abort.rs:4:5
   |
LL |     panic!()
   |     ^^^^^^^^ the failure occurred here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
